Extended AcapelaAPI
Added noise cancellation